syntax = "proto3";

option csharp_namespace = "Raga.Server";

service MatchmakingService {
  rpc FindMatch(FindMatchRequest) returns (FindMatchResponse);
  rpc CancelMatch(CancelMatchRequest) returns (CancelMatchResponse);
}

message FindMatchRequest {
  string player_id = 1;
  int32 skill_level = 2;
}

message FindMatchResponse {
  bool success = 1;
  string match_id = 2;
  repeated MatchPlayer players = 3;
}

message CancelMatchRequest {
  string player_id = 1;
  string match_id = 2;
}

message CancelMatchResponse {
  bool success = 1;
  string message = 2;
}

message MatchPlayer {
  string player_id = 1;
  int32 skill_level = 2;
}
